[package]
name = "rust-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.25"
log = "0.4.17"
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = "0.18.0"
ws = "0.9.2"
